// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`docs/components demos > 📸 renders ./docs/components/customization-value-type.tsx correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-app"
  >
    <div>
      test
    </div>
    <div
      class="ant-pro-card ant-pro-card-border"
      style="margin-block-end: 24px;"
    >
      <div
        class="ant-pro-card-header"
      >
        <div
          class="ant-pro-card-title"
        >
          SchemaForm
        </div>
      </div>
      <div
        class="ant-pro-card-body"
      >
        <form
          autocomplete="off"
          class="ant-form ant-form-vertical ant-pro-form"
          title="自定义 valueType"
        >
          <input
            style="display: none;"
            type="text"
          />
          <div
            class="ant-pro-form-group"
          >
            <div
              class="ant-pro-form-group-title"
            >
              标签
            </div>
            <div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-start ant-pro-form-group-container "
                style="column-gap: 32px; row-gap: 0;"
              >
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-form-item"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-form-item-label"
                      >
                        <label
                          class=""
                          for="name"
                          title="只读链接"
                        >
                          只读链接
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <a>
                              TradeCode 1
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-form-item"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-form-item-label"
                      >
                        <label
                          class=""
                          for="name"
                          title="链接"
                        >
                          链接
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              class="ant-input"
                              id="name"
                              placeholder="请输入链接"
                              type="text"
                              value="TradeCode 1"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-pro-form-group"
          >
            <div
              class="ant-pro-form-group-title"
            >
              路径
            </div>
            <div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-start ant-pro-form-group-container "
                style="column-gap: 32px; row-gap: 0;"
              >
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-form-item"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-form-item-label"
                      >
                        <label
                          class=""
                          for="status"
                          title="标签"
                        >
                          标签
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <span
                                  class="ant-tag"
                                >
                                  close
                                </span>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                <span
                                  class="ant-tag"
                                >
                                  close
                                </span>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                <input
                                  class="ant-input ant-input-sm"
                                  style="width: 78px;"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-form-item"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-form-item-label"
                      >
                        <label
                          class=""
                          for="status"
                          title="只读标签"
                        >
                          只读标签
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <span
                              class="ant-tag"
                            >
                              close
                            </span>
                            <span
                              class="ant-tag"
                            >
                              close
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="display: flex; gap: 8px; align-items: center;"
          >
            <button
              class="ant-btn ant-btn-default"
              type="button"
            >
              <span>
                重 置
              </span>
            </button>
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span>
                提 交
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="ant-pro-card ant-pro-card-border"
      style="margin-block-end: 24px;"
    >
      <div
        class="ant-pro-card-header"
      >
        <div
          class="ant-pro-card-title"
        >
          ProTable
        </div>
      </div>
      <div
        class="ant-pro-card-body"
      >
        <div
          class="ant-pro-table"
        >
          <div
            class="ant-pro-card ant-pro-table-search ant-pro-table-search-query-filter"
          >
            <form
              autocomplete="off"
              class="ant-form ant-form-horizontal ant-pro-query-filter ant-pro-form"
            >
              <input
                style="display: none;"
                type="text"
              />
              <div
                class="ant-row ant-row-start ant-pro-query-filter-row"
                style="margin-left: -12px; margin-right: -12px;"
              >
                <div
                  class="ant-col ant-col-8 ant-pro-query-filter-row-split"
                  style="padding-left: 12px; padding-right: 12px;"
                >
                  <div
                    class="ant-form-item"
                    style="flex-wrap: nowrap;"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-form-item-label"
                        style="flex: 0 0 80px;"
                      >
                        <label
                          class=""
                          for="name"
                          title="链接"
                        >
                          链接
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control"
                        style="max-width: calc(100% - 80px);"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <input
                              class="ant-input"
                              id="name"
                              placeholder="请输入链接"
                              style="width: 100%;"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-8 ant-pro-query-filter-row-split"
                  style="padding-left: 12px; padding-right: 12px;"
                >
                  <div
                    class="ant-form-item"
                    style="flex-wrap: nowrap;"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-form-item-label"
                        style="flex: 0 0 80px;"
                      >
                        <label
                          class=""
                          for="status"
                          title="标签"
                        >
                          标签
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control"
                        style="max-width: calc(100% - 80px);"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <input
                                  class="ant-input ant-input-sm"
                                  style="width: 78px;"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-8"
                  style="padding-left: 12px; padding-right: 12px; text-align: end;"
                >
                  <div
                    class="ant-form-item ant-pro-query-filter-actions"
                  >
                    <div
                      class="ant-row ant-form-item-row"
                    >
                      <div
                        class="ant-col ant-form-item-label"
                      >
                        <label
                          class="ant-form-item-no-colon"
                          title=" "
                        >
                           
                        </label>
                      </div>
                      <div
                        class="ant-col ant-form-item-control"
                      >
                        <div
                          class="ant-form-item-control-input"
                        >
                          <div
                            class="ant-form-item-control-input-content"
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                              style="column-gap: 16px; row-gap: 16px;"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <div
                                  style="display: flex; gap: 8px; align-items: center;"
                                >
                                  <button
                                    class="ant-btn ant-btn-primary"
                                    type="button"
                                  >
                                    <span>
                                      查 询
                                    </span>
                                  </button>
                                  <button
                                    class="ant-btn ant-btn-default"
                                    type="button"
                                  >
                                    <span>
                                      重 置
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            class="ant-pro-card"
          >
            <div
              class="ant-pro-card-body"
              style="padding: 0px;"
            >
              <div
                class="ant-table-wrapper"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-middle"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                        >
                          <table
                            style="table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  链接
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  标签
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="1"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  <a>
                                    TradeCode 1
                                  </a>
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  <span
                                    class="ant-tag"
                                  >
                                    close
                                  </span>
                                  <span
                                    class="ant-tag"
                                  >
                                    close
                                  </span>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-pro-card ant-pro-card-border"
      style="margin-block-end: 24px;"
    >
      <div
        class="ant-pro-card-header"
      >
        <div
          class="ant-pro-card-title"
        >
          ProDescriptions
        </div>
      </div>
      <div
        class="ant-pro-card-body"
      >
        <div
          class="ant-descriptions ant-pro-descriptions"
        >
          <div
            class="ant-descriptions-view"
          >
            <table>
              <tbody>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="1"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-label"
                      >
                        链接
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                        style="min-width: 0;"
                      >
                        <a>
                          TradeCode 1
                        </a>
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="1"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-label"
                      >
                        标签
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                        style="min-width: 0;"
                      >
                        <span
                          class="ant-tag"
                        >
                          close
                        </span>
                        <span
                          class="ant-tag"
                        >
                          close
                        </span>
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`docs/components demos > 📸 renders ./docs/components/valueEnum-map.tsx correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-app"
  >
    <div>
      test
    </div>
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card ant-pro-table-search ant-pro-table-search-query-filter"
      >
        <form
          autocomplete="off"
          class="ant-form ant-form-horizontal ant-pro-query-filter ant-pro-form"
        >
          <input
            style="display: none;"
            type="text"
          />
          <div
            class="ant-row ant-row-start ant-pro-query-filter-row"
            style="margin-left: -12px; margin-right: -12px;"
          >
            <div
              class="ant-col ant-col-8 ant-pro-query-filter-row-split"
              style="padding-left: 12px; padding-right: 12px;"
            >
              <div
                class="ant-form-item"
                style="flex-wrap: nowrap;"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                    style="flex: 0 0 80px;"
                  >
                    <label
                      class=""
                      for="status1"
                      title="状态（number）"
                    >
                      状态（number）
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                    style="max-width: calc(100% - 80px);"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          class="ant-select ant-select-in-form-item ant-pro-filed-search-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
                          style="width: 100%;"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-autocomplete="list"
                                aria-controls="status1_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="status1_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="status1"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-8 ant-pro-query-filter-row-split"
              style="padding-left: 12px; padding-right: 12px;"
            >
              <div
                class="ant-form-item"
                style="flex-wrap: nowrap;"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                    style="flex: 0 0 80px;"
                  >
                    <label
                      class=""
                      for="status2"
                      title="状态（number）"
                    >
                      状态（number）
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                    style="max-width: calc(100% - 80px);"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          class="ant-select ant-select-in-form-item ant-pro-filed-search-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
                          style="width: 100%;"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-autocomplete="list"
                                aria-controls="status2_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="status2_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="status2"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item ant-form-item-hidden"
              style="flex-wrap: nowrap;"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label"
                  style="flex: 0 0 80px;"
                >
                  <label
                    class=""
                    for="status3"
                    title="状态（boolean）"
                  >
                    状态（boolean）
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                  style="max-width: calc(100% - 80px);"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="ant-select ant-select-in-form-item ant-pro-filed-search-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="status3_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="status3_list"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="status3"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            请选择
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding-left: 12px; padding-right: 12px; text-align: end;"
            >
              <div
                class="ant-form-item ant-pro-query-filter-actions"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                  >
                    <label
                      class="ant-form-item-no-colon"
                      title=" "
                    >
                       
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                          style="column-gap: 16px; row-gap: 16px;"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <div
                              style="display: flex; gap: 8px; align-items: center;"
                            >
                              <button
                                class="ant-btn ant-btn-primary"
                                type="button"
                              >
                                <span>
                                  查 询
                                </span>
                              </button>
                              <button
                                class="ant-btn ant-btn-default"
                                type="button"
                              >
                                <span>
                                  重 置
                                </span>
                              </button>
                            </div>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <a
                              class="ant-pro-query-filter-collapse-button"
                            >
                              展开
                              <span
                                aria-label="down"
                                class="anticon anticon-down"
                                role="img"
                                style="margin-inline-start: 0.5em; transition: 0.3s all; transform: rotate(0turn);"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-block-start: 0;"
        >
          <div
            class="ant-pro-table-list-toolbar"
          >
            <div
              class="ant-pro-table-list-toolbar-container"
            >
              <div
                class="ant-pro-table-list-toolbar-left"
              />
              <div
                class="ant-pro-table-list-toolbar-right"
                style="align-items: center;"
              >
                <div
                  class="ant-pro-table-list-toolbar-setting-items"
                >
                  <div
                    class="ant-pro-table-list-toolbar-setting-item"
                  >
                    <span>
                      <span
                        aria-label="reload"
                        class="anticon anticon-reload"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="reload"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-pro-table-list-toolbar-setting-item"
                  >
                    <span>
                      <span
                        aria-label="column-height"
                        class="anticon anticon-column-height ant-dropdown-trigger"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="column-height"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M840 836H184c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h656c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zm0-724H184c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h656c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM610.8 378c6 0 9.4-7 5.7-11.7L515.7 238.7a7.14 7.14 0 00-11.3 0L403.6 366.3a7.23 7.23 0 005.7 11.7H476v268h-62.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V378h62.8z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-pro-table-list-toolbar-setting-item"
                  >
                    <span
                      aria-label="setting"
                      class="anticon anticon-setting"
                      role="img"
                      tabindex="-1"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="setting"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle ant-table-empty"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                    >
                      <table
                        style="table-layout: auto;"
                      >
                        <colgroup />
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              状态（number）
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              状态（number）
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              状态（boolean）
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="3"
                            >
                              <div
                                class="ant-empty ant-empty-normal"
                              >
                                <div
                                  class="ant-empty-image"
                                >
                                  <svg
                                    height="41"
                                    viewBox="0 0 64 41"
                                    width="64"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <g
                                      fill="none"
                                      fill-rule="evenodd"
                                      transform="translate(0 1)"
                                    >
                                      <ellipse
                                        cx="32"
                                        cy="33"
                                        fill="#f5f5f5"
                                        rx="32"
                                        ry="7"
                                      />
                                      <g
                                        fill-rule="nonzero"
                                        stroke="#d9d9d9"
                                      >
                                        <path
                                          d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                        />
                                        <path
                                          d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                          fill="#fafafa"
                                        />
                                      </g>
                                    </g>
                                  </svg>
                                </div>
                                <div
                                  class="ant-empty-description"
                                >
                                  暂无数据
                                </div>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`docs/components demos > 📸 renders ./docs/components/valueType.tsx correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-app"
  >
    <div>
      test
    </div>
    <div
      class="ant-form-item"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title="valueType 选择"
          >
            valueType 选择
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-select ant-select-in-form-item ant-pro-filed-search-select ant-select-single ant-select-allow-clear ant-select-show-search"
                style="width: 200px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="文本框"
                  >
                    文本框
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-clear"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close-circle"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <form
      autocomplete="off"
      class="ant-form ant-form-vertical ant-pro-form"
    >
      <input
        style="display: none;"
        type="text"
      />
      <div
        class="ant-pro-form-group"
      >
        <div
          class="ant-pro-form-group-title"
        >
          分组
        </div>
        <div>
          <div
            class="ant-space ant-space-horizontal ant-space-align-start ant-pro-form-group-container "
            style="column-gap: 32px; row-gap: 0;"
          >
            <div
              class="ant-space-item"
            >
              <div
                class="ant-form-item"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                  >
                    <label
                      class="ant-form-item-required"
                      for="text"
                      title="编辑器"
                    >
                      编辑器
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper ant-input-affix-wrapper-focused pro-field pro-field-m"
                        >
                          <input
                            class="ant-input"
                            id="text"
                            placeholder="请输入"
                            type="text"
                            value="123456"
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              class="ant-input-clear-icon"
                              role="button"
                              tabindex="-1"
                            >
                              <span
                                aria-label="close-circle"
                                class="anticon anticon-close-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="close-circle"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="ant-form-item"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                  >
                    <label
                      class=""
                      for="text"
                      title="只读"
                    >
                      只读
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        123456
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; gap: 8px; align-items: center;"
      >
        <button
          class="ant-btn ant-btn-default"
          type="button"
        >
          <span>
            重 置
          </span>
        </button>
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            提 交
          </span>
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
